fixed main dark mode bug

--- a/css/aboutus-dark.css
+++ b/css/aboutus-dark.css
@@ -1,16 +1,16 @@
 .dark-mode {
   background-color: #000;
 }
+.dark-mode .header {
+  color: #fff;
+}
 .dark-mode .header__img {
   background-image: url("/img/galaxy-small.jpg");
+  z-index: 10;
 }
 .dark-mode .header__background {
-  height: 26rem;
   background-color: rgba(0, 0, 0, 0.6);
-}
-.dark-mode .header .logo {
-  height: 12rem;
-  width: 100%;
+  z-index: 11;
 }
 .dark-mode .header .logo__clickable .text {
   display: block;
@@ -20,62 +20,17 @@
   bottom: 2rem;
   left: 12rem;
   text-wrap: nowrap;
+  width: 12rem;
   text-shadow: 0 0 10px #43b7ff, 0 0 10px #43b7ff, 0 0 10px #43b7ff, 0 0 10px #43b7ff, 0 0 10px #43b7ff;
   animation: neonGlow 3s ease-out forwards;
 }
-.dark-mode .header__text {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  height: 100%;
-  width: 100%;
-}
-.dark-mode .header__text h1 {
-  font-size: 3.6rem;
-  font-weight: 800;
-  text-align: center;
-}
 .dark-mode .header .color-scheme-btn {
-  position: absolute;
-  top: 8rem;
-  right: 0;
-  width: 7rem;
-  height: 7rem;
-  background: none;
-  border: 1px solid transparent;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
   color: #43b7ff;
 }
-.dark-mode .header .color-scheme-btn__box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 3rem;
-  height: 3rem;
-}
 .dark-mode .header .color-scheme-btn__pill {
-  position: relative;
-  width: 4rem;
-  height: 1.6rem;
   background-color: #43b7ff;
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
 }
 .dark-mode .header .color-scheme-btn .color-scheme-btn__circle {
-  position: absolute;
-  left: 0;
-  height: 2.2rem;
-  width: 2.2rem;
-  border-radius: 50%;
-  background-color: #fff;
-  box-shadow: 0px 0px 3px 0px black;
-  transition: left 0.3s;
   left: 2rem;
 }
 .dark-mode .header .burger-btn--active .burger-btn__bar1,
