--- a/sass/aboutus.scss
+++ b/sass/aboutus.scss
@@ -177,7 +177,7 @@ table {
 		justify-content: space-evenly;
 		align-items: center;
 		color: $secondary-color;
-		z-index: 70;
+		z-index: 80;
 
 		&__box {
 			display: flex;
